package pucmg.ps.backend.shared.enums

enum class Setor(val label: String) {
    ALIMENTACAO("Alimentação"),
    TECNOLOGIA("Tecnologia"),
    VAREJO("Varejo"),
    EDUCACAO("Educação"),
    SAUDE("Saúde"),
    TRANSPORTE("Transporte"),
    ENTRETENIMENTO("Entretenimento"),
    SERVICOS("Serviços"),
}