package pucmg.ps.backend.shared.enums

enum class TipoMovimentacao {
    CREDITO,
    DEBITO,
    RESGATE,
}