@startuml

' =========================
' ENUMS
' =========================

enum Setor {
    ALIMENTACAO
    TECNOLOGIA
    VAREJO
    EDUCACAO
    SAUDE
    TRANSPORTE
    ENTRETENIMENTO
    SERVICOS
}

enum TipoMovimentacao {
    CREDITO
    DEBITO
    RESGATE
}

' =========================
' USUÁRIOS
' =========================

abstract class UserEntity {
    -email: String
    -senha: String
    --
    +autenticar(): Boolean
    +alterarSenha(): void
}

class Aluno {
    -nome: String
    -cpf: String
    -rg: String
    -endereco: String
    -curso: String
    --
    +cadastrar(): void
    +consultarExtrato(): List<MovimentacaoMoeda>
    +trocarMoedas(vantagem: Vantagem): Cupom
}

class Professor {
    -nome: String
    -cpf: String
    -departamento: String
    --
    +cadastrar(): void
    +enviarMoedas(aluno: Aluno, valor: Integer): void
}

UserEntity <|-- Aluno
UserEntity <|-- Professor

' =========================
' INSTITUIÇÃO
' =========================

class Instituicao {
    -nome: String
    -cnpj: String
    -endereco: String
}

Instituicao "1" o-- "*" Aluno
Instituicao "1" o-- "*" Professor

' =========================
' CARTEIRA / MOEDA
' =========================

class Carteira {
    -saldo: Integer
    --
    +creditar(valor: Integer): void
    +debitar(valor: Integer): void
    +consultarSaldo(): Integer
}

class MovimentacaoMoeda {
    -valor: Integer
    -data: Date
    -descricao: String
    -tipo: TipoMovimentacao
    --
    +registrar(): void
}

Aluno "1" *-- "1" Carteira
Carteira "1" --> "*" MovimentacaoMoeda

Professor "1" --> "*" MovimentacaoMoeda : autoriza

' =========================
' EMPRESA / VANTAGENS
' =========================

class EmpresaParceira {
    -razaoSocial: String
    -cnpj: String
    -setor: Setor
    --
    +cadastrar(): void
}

class Vantagem {
    -descricao: String
    -custoMoedas: Integer
    --
    +descrever(): String
}

EmpresaParceira "1" *-- "*" Vantagem

' =========================
' CUPOM
' =========================

class Cupom {
    -codigo: String
    -dataEmissao: Date
    -dataValidade: Date
    -utilizado: Boolean
    --
    +usar(): Boolean
}

Aluno "1" --> "*" Cupom : resgata
Cupom "*" --> "1" Vantagem : referente a

@enduml